@@ -1,6 +1,7 @@
 Revision history for Device-RadioThermostat
 
 {{$NEXT}}
+        - Add datalog method
         - Indicate that the links for API docs are links to a pdf
 
 0.01  2013-09-09 23:17:45 EDT
